fixed meeting minnutes

--- a/admin/meetings/112922_phase2.md
+++ b/admin/meetings/112922_phase2.md
@@ -5,7 +5,8 @@
 **Location: Zoom**
 
 **Start + End Time: 9:00-10:00 AM**
-- Group Meeting
+- Group Meeting <br>
+
 **Start + End Time: 10:30Am -3:00 PM**
 
 ## Attendance
