Markdown linting fixes checkpoint

--- a/admin/meetings/110422-ci-cd.md
+++ b/admin/meetings/110422-ci-cd.md
@@ -17,13 +17,10 @@
 * Links used to gain insight on creating java validator and log generator
 
 * Used test github repository
-https://github.com/ojeengammah/Test/_CI-CD/_HTML/_Validator
 
-* Validator Example
-https://github.com/Cyb3r-Jak3/html5validator-action/blob/master/.github/workflows/action-test.yml#L26
+* [Validator Example](https://github.com/Cyb3r-Jak3/html5validator-action/blob/master/.github/workflows/action-test.yml#L26)
 
-* Structure of Validator
-https://github.com/marketplace/actions/html5-validator
+* [Structure of Validator](https://github.com/marketplace/actions/html5-validator)
 
 * All actions require - uses: actions/checkout@v2
 
